[Minor] Bugfix: Hovering over divider did only work in first half
Reason: The divider overlaps with the padding of the following div, but because of dom element position the div was considered in front of the divider. Z-Index fixes that.

--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -164,6 +164,7 @@ body {
   overflow: hidden;
   background-color: red;
   position:absolute;
+  z-index: 100;
 }
 
 .divider.vertical {
